--- a/formenvios.html
+++ b/formenvios.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Link Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" 
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--Estilos-->
     <link rel="stylesheet" href="./css/style.css">
     <title>Envios a domicilio</title>
+    <!--Icono pestaña-->
+    <link rel="icon" href="./img/LogoBlack.png" />
 </head>
 <body class="container-body">
     <header id="menu">
@@ -30,7 +34,8 @@
         </div>
       </div>
   
-  <section class="section-form mt-5" id="customer">
+  <!--Formulario envios-->
+  <section class="section-form" id="customer">
     <form>
       <div class="form mt-5 mb-3">
           <h1 class="text-form mb-5">Ingrese sus datos para hacer el envio a su domicilio</h1>
@@ -51,7 +56,7 @@
     </div>
   </form>
   </section>
-
+ <!--Footer web-->
   <footer>    
     <div class="container-footer-all">
          <div class="footer-body">
@@ -61,7 +66,7 @@
              <div class="colum2">
                  <h1>Sobre Nosotros</h1>
                  <p>Soy una desarrolladora Front End Junior, me dedico a hacer paginas web con HTML5, CSS3 y Javascript. 
-                   Tambien trabajo con diseño mobile en Flutter y tengo algunos conocimientos en Adobe XD.</p> 
+                   Tambien trabajo con diseño mobile en Flutter y tengo algunos conocimientos en React js.</p> 
              </div>
              <div class="colum3">
                  <h1>Informacion Contactos</h1>
@@ -87,15 +92,15 @@
      <div class="container-footer">
             <div class="footer">
                  <div class="copyright">
-                     © 2022 Todos los Derechos Reservados | <a href="">Marina Baiardi Desarrolladora Front End</a>
+                     © 2022 Todos los Derechos Reservados | <a href="https://github.com/marina-baiardi">Marina Baiardi Desarrolladora Front End</a>
                  </div>
                  <div class="information">
-                     <a href="">Informacion Compañia</a> | <a href="">Privacion y Politica</a> | <a href="">Terminos y Condiciones</a>
+                     <a href="https://github.com/marina-baiardi">Informacion Compañia</a> | <a href="https://github.com/marina-baiardi">Privacion y Politica</a> | <a href="https://github.com/marina-baiardi">Terminos y Condiciones</a>
                  </div>
              </div>
          </div>
  </footer>
-
+<!--Fin footer web-->
 <!--Script JS-->
 <script src="./js/nav.js"></script>
 <script src="./js/formenvios.js"></script>
